# ChangeLog for www-apps/otrs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> -otrs-2.4.7.ebuild:
  removed by listed in CVE

  17 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> +otrs-2.3.6.ebuild,
  otrs-2.4.7.ebuild, +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
  add 2.3.6 for security reason

  16 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> +otrs-2.3.6.ebuild,
  otrs-2.4.7.ebuild, +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
  bump

  16 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.7.ebuild,
  +otrs-2.4.8.ebuild, otrs-3.0.0_beta3.ebuild:
  bump and QA

  14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/postinstall-ru-2.txt, +postinstall-ru-2.txt:
  fix install

  14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/postinstall-ru-2.txt:
  fix install - add postinstall-ru-2.txt

  14 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -otrs-3.0.0_beta2.ebuild, +otrs-3.0.0_beta3.ebuild:
  bump

  05 Sep 2010; <slep@gentoo.org> files/reconfig-3:
  fix reconfig script

  05 Sep 2010; <slep@gentoo.org> otrs-2.4.7.ebuild, files/reconfig-3:
  fix install root

*otrs-3.0.0_beta2 (04 Sep 2010)

  04 Sep 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +otrs-3.0.0_beta2.ebuild:
  new otrs

  20 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.7.ebuild,
  +files/apache2-2.patch:
  sunrise fix

  20 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.7.ebuild:
  Fix DEPEND logic

  16 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru> -otrs-2.4.5.ebuild,
  -otrs-2.4.6.ebuild, +otrs-2.4.7.ebuild:
  delete affected www-apps/otrs version and bump

  31 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> -otrs-2.4.1.ebuild:
  drop old

  13 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +otrs-2.4.6.ebuild:
  version bump; add cjk USE

  16 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru> otrs-2.4.5.ebuild,
  +files/reconfig-3: