@@ -10,8 +10,10 @@ AUX reconfig-4 972 RMD160 67c5fa5eb37b5381a3fb9787c0f771b9555df6ac SHA1 fac53b65
 DIST otrs-2.3.6.tar.bz2 11677703 RMD160 824fc9f0a24f383dd71f5ce0bdfeca547a56cca3 SHA1 a1e2daa11e4873f192b831c24d0c4c64da2d86d0 SHA256 db6a4d4fdc65ec5ca748ddf24e210cd1e5e53c09d4df15a0a0244f7a34d1f039
 DIST otrs-2.4.8.tar.bz2 14963771 RMD160 873e458c43ac27a85d43d0354b757d5e317ac593 SHA1 7b0a3477fed6ba056c9fdc5ce516b6a7ca4f5e26 SHA256 144b9a0e09671f44ff714b725cbaef8f4405ddb9ef83115bcfd4d81f1fa23dad
 DIST otrs-3.0.0-beta3.tar.bz2 15501058 RMD160 e001336f79d0661dd16a314a696a1f00c4e5e0ba SHA1 d4e45874b4a08f8784401d40559ab2d75d020fdc SHA256 f5c4f2254e20ea07c469c38e6bb2e2e16f1aecc2a63f33bea903be01ac4d3490
+DIST otrs-3.0.0-beta4.tar.bz2 15581571 RMD160 646d5a6af0a3b4d2ebc477ce018e91eed95446ad SHA1 cf0155db949a9b21aaf99604314c35589830c6cc SHA256 56c409c1a052adadac9d321151a867cc8da61e8f702e98799a2cbb0f0b604c68
 EBUILD otrs-2.3.6.ebuild 2893 RMD160 098ef509d99e24172f22191799f925b4a2a91b83 SHA1 f971d6fc4708330080ef4cd842c21c4f40c09138 SHA256 9f5cda20d09cf796d8323da5391d703f1db3cd767669ef1086b712fbdfc737b0
 EBUILD otrs-2.4.8.ebuild 3417 RMD160 0152ff712f9e4fbe10f1f3772f9436b6dfd19733 SHA1 257ebc3540e3c8c6337c0e774f021f705e7731e4 SHA256 1d7c0a4383d457157fc94a0fa5afc3d8c9933d73f5977a94bda1823c9e15deed
 EBUILD otrs-3.0.0_beta3.ebuild 3687 RMD160 43622b863023fc5ae5c15f175df5fb12f6d9ec36 SHA1 d268f3758f5d8e55f3737b7a631bbabdf2be7866 SHA256 33a50439960d33a37128e7979545ca883bf6ac863647e1ffc72a78c0881608ff
-MISC ChangeLog 2476 RMD160 2c98017d9cbbe95e342d2e7ab0c846f7772b8b7c SHA1 a092b2405338eaa470da5c556a87d358c571126c SHA256 fee3d0bd1525707a9156424889c2291bfba79cc4d2c4ed9de9864a2009cf013e
+EBUILD otrs-3.0.0_beta4.ebuild 3687 RMD160 a9b357fbd93a698fc5f4ab095db09bbef0c7f247 SHA1 883fc79d7611e2b3aa402f7f5b8f03081d7f50bc SHA256 d56043ad4b1bd839fd7e7a288407e606dcc282d468d70263607240dfbfdf46a1
+MISC ChangeLog 2589 RMD160 9ae574a5f6c23c2c30704e46c1728ae2535195ae SHA1 25e12db9eda2260510b25440ffedbc448f4e371b SHA256 5ef3c3b8c8fdcf4b9221d9e4003b3dfe49835063298400a6c49250c47bf0c9cd
 MISC metadata.xml 232 RMD160 7550e0d3d1b07d7614e29c638c4bf9d46975ef28 SHA1 2bac1e85a3ac75251f44064ad74b1d61277d472e SHA256 5d1ed2a79ee05f2b364af2a072fe6e10851c6b410849f18065d9c5fba7a7f546
